[package]
name = "trinket"
version = "2.0.0"
repository = "https://github.com/DkeRee/Trinket"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
cozy-chess = "0.2.1"
